[gd_scene load_steps=3 format=2]

[ext_resource path="res://AuthoredPropertyCreationScreen.gd" type="Script" id=1]
[ext_resource path="res://SingleBNumberBlueprintEditPanel.tscn" type="PackedScene" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.054902, 0.0666667, 0.0980392, 1 )

[node name="VBC" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="ColorRect/VBC"]
margin_right = 1366.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
color = Color( 0.196078, 0.156863, 0.156863, 1 )

[node name="Label" type="Label" parent="ColorRect/VBC/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -683.0
margin_top = -14.5
margin_right = 683.0
margin_bottom = 14.5
text = "Personality Model Editor"
align = 1
valign = 1

[node name="HBC" type="HBoxContainer" parent="ColorRect/VBC"]
margin_top = 36.0
margin_right = 1366.0
margin_bottom = 736.0
size_flags_vertical = 3

[node name="VBC1" type="VBoxContainer" parent="ColorRect/VBC/HBC"]
margin_right = 143.0
margin_bottom = 700.0
size_flags_vertical = 3

[node name="AddButton" type="Button" parent="ColorRect/VBC/HBC/VBC1"]
margin_right = 143.0
margin_bottom = 20.0
text = "Create New Property"

[node name="DeleteButton" type="Button" parent="ColorRect/VBC/HBC/VBC1"]
margin_top = 24.0
margin_right = 143.0
margin_bottom = 44.0
text = "Delete Property"

[node name="PropertyList" type="ItemList" parent="ColorRect/VBC/HBC/VBC1"]
margin_top = 48.0
margin_right = 143.0
margin_bottom = 700.0
size_flags_vertical = 3
select_mode = 1

[node name="BNumberEditPanel" parent="ColorRect/VBC/HBC" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 147.0
margin_right = 147.0
margin_bottom = 700.0

[node name="PropertyCreationWindow" type="ConfirmationDialog" parent="."]
margin_right = 300.0
margin_bottom = 400.0
rect_min_size = Vector2( 300, 400 )
resizable = true
dialog_text = "New authored property:"

[node name="VBC" type="VBoxContainer" parent="PropertyCreationWindow"]
margin_left = 8.0
margin_top = 22.0
margin_right = 292.0
margin_bottom = 364.0

[node name="HSeparator" type="HSeparator" parent="PropertyCreationWindow/VBC"]
margin_right = 40.0
margin_bottom = 4.0

[node name="BNumberEditPanel" parent="PropertyCreationWindow/VBC" instance=ExtResource( 2 )]
margin_left = 8.0
margin_top = 22.0
margin_right = -8.0
margin_bottom = -18.0

[node name="ConfirmPropertyDeletionWindow" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0

[node name="VBC" type="VBoxContainer" parent="ConfirmPropertyDeletionWindow"]
margin_left = 8.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 34.0

[connection signal="pressed" from="ColorRect/VBC/HBC/VBC1/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="ColorRect/VBC/HBC/VBC1/DeleteButton" to="." method="_on_DeleteButton_pressed"]
[connection signal="item_activated" from="ColorRect/VBC/HBC/VBC1/PropertyList" to="." method="_on_PropertyList_item_activated"]
[connection signal="confirmed" from="PropertyCreationWindow" to="." method="_on_PropertyCreationWindow_confirmed"]
[connection signal="confirmed" from="ConfirmPropertyDeletionWindow" to="." method="_on_ConfirmPropertyDeletionWindow_confirmed"]
